--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
     </div>
   </section>
 
-  <section class="content">
-      <main class="main">
+  <main class="main">
+      <section class="content">
         <article class="blog article">
 
           <div class="blog_wrp-img">
@@ -281,7 +281,7 @@
           </div>   
         </article>
 
-      </main>
+      </section>
       
       <aside class="sidebar">
         <section class="posts_section">
