--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <title>MQ diplom</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" media="(min-width: 641px) and (max-width: 1200px)" href="css/tablet.css">
+    <link rel="stylesheet" media="(max-width: 1200px)" href="css/tablet.css">
     <link rel="stylesheet" media="(max-width: 640px)" href="css/mobile.css">
     
     <link rel="apple-touch-icon" sizes="57x57" href="./favicons/apple-icon-57x57.png">
@@ -371,7 +371,7 @@
             
         <form class="follow" action="#">
           <h2 class="follow_title section_title">Рассылка</h2>
-          <label class="visually-hidden" for="subscribe">Введите email</label>
+          <label class="visually-hidden" for="follow">Введите email</label>
             <input class="follow_field" type="email"  id="follow" placeholder="Ваш email-адрес" required>
             <button class="button-submit" type="submit">Подписаться</button>
         </form>
@@ -405,8 +405,7 @@
         </section>
 
       </aside>
-    </div>
-  </section>
+    </main>
 
   <section class="shop">
     <h2 class="shop_title section_title">Наши изделия</h2>
